--- a/fronted/public/views/sensores/visualizar_sensores.html
+++ b/fronted/public/views/sensores/visualizar_sensores.html
@@ -35,6 +35,36 @@
                         <a href="datos_sensor.html"><button class="card__details-btn">Ver detalles</button></a>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card__header">
+                        <div class="card__status-group">
+                            <span class="card__status card__status--online">Sensor 1</span>
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__name">Sensor de Temperatura</h3>
+                        <p class="card__location">zona 1</p>
+                        <p class="card__states">Activo</p>
+                    </div>
+                    <div class="card__footer">
+                        <a href="datos_sensor.html"><button class="card__details-btn">Ver detalles</button></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__header">
+                        <div class="card__status-group">
+                            <span class="card__status card__status--online">Sensor 1</span>
+                        </div>
+                    </div>
+                    <div class="card__content">
+                        <h3 class="card__name">Sensor de Temperatura</h3>
+                        <p class="card__location">zona 1</p>
+                        <p class="card__states">Activo</p>
+                    </div>
+                    <div class="card__footer">
+                        <a href="datos_sensor.html"><button class="card__details-btn">Ver detalles</button></a>
+                    </div>
+                </div>
                 
                 <div class="card">
                     <div class="card__header">
